# romanum

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Jenkinsfile  converter.h  main.cpp  romannumber.cpp  romannumber.h  tst_validatortest.cpp  validator.cpp  validator.h  validatortest.cpp
cmd/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt  append.pu  converter.cpp  converter.h  romannumber.cpp  romannumber.h  validation.pu  validator.cpp  validator.h
core/tests/: CMakeLists.txt  validatortest.cpp
qt-gui/: qt-gui.pro
qt-gui/core/: core.pro
qt-gui/gui/: ConvertForm.ui.qml  gui.pro  main.cpp  main.qml  qml.qrc  romanconverter.cpp  romanconverter.h  romanvalidator.cpp  romanvalidator.h
tests/: CMakeLists.txt  convertertest.cpp  validatortest.cpp
